prepare callbacks added

--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cnnClassfier.constants import *\n",
-    "from cnnClassfier.utils.common import read_yaml, create_directories"
+    "from cnnClassifier.constants import *\n",
+    "from cnnClassifier.utils.common import read_yaml, create_directories"
    ]
   },
   {
