--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cnnClassfier.constants import *\n",
-    "from cnnClassfier.utils.common import read_yaml, create_directories"
+    "from cnnClassifier.constants import *\n",
+    "from cnnClassifier.utils.common import read_yaml, create_directories"
    ]
   },
   {
